--- a/index.html
+++ b/index.html
@@ -2,15 +2,71 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Boxe Gaúcho</title>
-    <link rel="stylesheet" href="assets/css/bootstrap-theme.css">
-    <link rel="stylesheet" href="assets/css/bootstrap.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Boxe Gaúcho</title>
+	<link rel="stylesheet" href="assets/css/bootstrap-theme.css">
+	<link rel="stylesheet" href="assets/css/bootstrap.css">
+	<link rel="stylesheet" href="assets/css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
 </head>
 <body>
 
+	<header>
+		<div class="header">
+			<div class="row">
+				<div class="container">	
+					<!-- logo section-->
+					<div class="logo pull-left">
+						<img src="assets/img/logo.jpg" alt="Logo boxe gaucho" width="125px" class="img-responsive">
+					</div>	
+					<!-- navbar-->
+					<div class="col-xs-8 pull-right mainMenu">
+						<nav class="navbar navbar-default" role="navigation">
+							<div class="container-fluid">
+								<!-- Brand and toggle get grouped for better mobile display -->
+								<div class="navbar-header">
+									<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+										<span class="sr-only">Toggle navigation</span>
+										<span class="icon-bar"></span>
+										<span class="icon-bar"></span>
+										<span class="icon-bar"></span>
+									</button>
+								</div>
 
-<script src="assets/js/bootstrap.min.js"></script>	
+								<!-- Collect the nav links, forms, and other content for toggling -->
+								<div class="collapse navbar-collapse navbar-ex1-collapse">
+									<ul class="nav navbar-nav">
+										<li class="active"><a href="#">INICIAL</a></li>
+										<li><a href="#">A FGBoxe</a></li>
+										<li><a href="#">TREINADORES</a></li>
+										<li><a href="#">BOXE</a></li>
+										<li><a href="#">RANKING</a></li>
+										<li><a href="#">NOTÍCIAS</a></li>
+										<li><a href="#">CONTATO</a></li>
+									</ul>
+								</div><!-- /.navbar-collapse -->
+							</div> <!--container navbar-->
+						</nav>
+					</div><!-- right column header-->
+					<!-- flag effect -->
+				</div><!-- header container-->
+			</div><!--row-->
+			<div class="flag">
+				<span class="flag green"></span>
+				<span class="flag red"></span>
+				<span class="flag yellow"></span>
+			</div>
+		</div><!--header-->
+	</header>
+	<!-- hero area-->
+	<div class="hero">
+		
+	</div><!--hero-->
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+	<script src="assets/js/bootstrap.min.js"></script>	
 </body>
 </html>
+
+
