added the news section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="assets/css/bootstrap-theme.css">
 	<link rel="stylesheet" href="assets/css/bootstrap.css">
 	<link rel="stylesheet" href="assets/css/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Oxygen|Roboto" rel="stylesheet">
 </head>
 <body>
 
@@ -63,7 +63,72 @@
 	<div class="hero">
 		
 	</div><!--hero-->
-
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-12 col-md-6">
+				<main class="news">
+					<h3 class="title text-center">Federação Gaúcha de Boxe</h3>
+					<div class="news-description">
+						<p>
+							Desde a medalha de Bronze conquistada nos Jogos Olímpicos do México, em 1968, o Boxe do Brasil amargava um ostracismo indigno na modalidade. Esse vácuo durou quarenta anos, período em que não conseguimos sequer figurar entre as 40 melhores equipes do mundo. Essa realidade precisava ser modificada.
+						</p>
+						<p>
+							Em pouco tempo, o Boxe do Brasil pulou para o Top 10 em Campeonatos Mundiais. Em apenas duas edições de Jogos Olímpicos conquistamos quatro medalhas olímpicas. Entre 2009 e 2011 subimos três vezes no lugar mais alto do pódio nos mundiais Feminino, Juvenil e Masculino Elite. Entre 2009 e 2015 foram 9 as medalhas conquistadas em Campeonatos Mundiais.
+						</p>
+					</div>
+					<button type="button" class="btn btn-black pull-right">Saiba Mais...</button>
+				</main>
+			</div>
+			<div class="col-xs-12 col-md-6">
+				<aside class="lastNews">
+					<div class="row">
+						<h3 class="title pull-left">Últimas Notícias:</h3>
+					</div>
+					<div class="lastNews-bg">
+						<div class="lastNews-box">
+							<div class="lastNews-description">
+								<div class="col-xs-2">
+									<img src="assets/img/news2.jpg" alt="Lutador"  width="70px">
+								</div>
+								<div class="col-xs-10">
+									<a href="#">
+										O Boxe do Brasil estreou com uma bela vitória no Torneio de Verão de Iquique, que está acontecendo no Chile [...]
+									</a>
+								</div>
+							</div> <!-- description -->
+						</div> <!-- news1-->
+						<div class="lastNews-box">
+							<div class="lastNews-description">
+								<div class="col-xs-2">
+									<img src="assets/img/news3.jpg" alt="Lutador"  width="70px">
+								</div>
+								<div class="col-xs-10">
+									<a href="#">
+										O Boxe do Brasil estreou com uma bela vitória no Torneio de Verão de Iquique, que está acontecendo no Chile [...]
+									</a>
+								</div>
+							</div>
+						</div> 
+						<div class="lastNews-box">
+							<div class="lastNews-description">
+								<div class="col-xs-2">
+									<img src="assets/img/capa.jpg" alt="Lutador"  width="70px">
+								</div>
+								<div class="col-xs-10">
+									<a href="#">
+										O Boxe do Brasil estreou com uma bela vitória no Torneio de Verão de Iquique, que está acontecendo no Chile [...]
+									</a>
+								</div>
+							</div><!--description -->
+						</div> <!-- news 3-->
+						<div class="centerButtonLastNews">
+							<button type="button" class="btn btn-black pull-right">Mais Notícias...</button>
+						</div>
+					</div><!-- bg -->
+				</aside>
+			</div>
+		</div>
+	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<script src="assets/js/bootstrap.min.js"></script>	
 </body>
