--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Boxe Gaúcho</title>
+	<link rel="stylesheet" href="assets/css/normalize.css">
 	<link rel="stylesheet" href="assets/css/bootstrap-theme.css">
 	<link rel="stylesheet" href="assets/css/bootstrap.css">
 	<link rel="stylesheet" href="assets/css/style.css">
@@ -87,10 +88,10 @@
 					<div class="lastNews-bg">
 						<div class="lastNews-box">
 							<div class="lastNews-description">
-								<div class="col-xs-2">
+								<div class="col-xs-12 col-md-2 text-center">
 									<img src="assets/img/news2.jpg" alt="Lutador"  width="70px">
 								</div>
-								<div class="col-xs-10">
+								<div class="col-xs-12 col-md-10">
 									<a href="#">
 										O Boxe do Brasil estreou com uma bela vitória no Torneio de Verão de Iquique, que está acontecendo no Chile [...]
 									</a>
@@ -99,10 +100,10 @@
 						</div> <!-- news1-->
 						<div class="lastNews-box">
 							<div class="lastNews-description">
-								<div class="col-xs-2">
+								<div class="col-xs-12 col-md-2 text-center">
 									<img src="assets/img/news3.jpg" alt="Lutador"  width="70px">
 								</div>
-								<div class="col-xs-10">
+								<div class="col-xs-12 col-md-10">
 									<a href="#">
 										O Boxe do Brasil estreou com uma bela vitória no Torneio de Verão de Iquique, que está acontecendo no Chile [...]
 									</a>
@@ -111,10 +112,10 @@
 						</div> 
 						<div class="lastNews-box">
 							<div class="lastNews-description">
-								<div class="col-xs-2">
+								<div class="col-xs-12 col-md-2 text-center">
 									<img src="assets/img/capa.jpg" alt="Lutador"  width="70px">
 								</div>
-								<div class="col-xs-10">
+								<div class="col-xs-12 col-md-10">
 									<a href="#">
 										O Boxe do Brasil estreou com uma bela vitória no Torneio de Verão de Iquique, que está acontecendo no Chile [...]
 									</a>
@@ -126,9 +127,45 @@
 						</div>
 					</div><!-- bg -->
 				</aside>
+			</div> <!-- col últimas notícias-->
+		</div><!-- row-->
+		<div class="row" style="margin-top: 30px">
+			<div class="col-xs-12 col-md-6">
+				<div class="latest text-center">
+					<div class="latestHeader">
+						<h3 class="title">Últimos Videos</h3>
+					</div>
+					<div class="col-xs-12 col-md-6">
+						<div class="video">
+							<iframe width="100%" src="https://www.youtube.com/embed/r9-4lUHU6WE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+						</div>
+					</div>
+					<div class=" col-xs-12 col-md-6 outros-videos">
+						<ul>
+							<li><a href="#">
+									<p>Robson Conceição conquista a medalha de prata no Campeonato Mundial de Boxe de 2013[...]</p>
+									<small>12/08/2014,22:15hs</small>
+									<span class="pull-right">Saiba Mais »</span>
+								</a></li>
+							<li><a href="#">
+									<p>Everton Lopes conquista uma honrosa medalha de bronze no Campeonato Mundial de 2013 realizado na cidade de Almaty, Cazaquistão [...]</p>
+									<small>12/08/2014,22:07hs</small>
+									<span class="pull-right">Saiba Mais »</span>
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="col-xs-12 col-md-6">
+				<div class="latest">
+					<div class="latestHeader">
+						<h3 class="title">Últimas Imagens</h3>
+					</div>
+				</div>
 			</div>
 		</div>
-	</div>
+	</div> <!--container -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<script src="assets/js/bootstrap.min.js"></script>	
 </body>
