updated the latest news to LI itens

--- a/index.html
+++ b/index.html
@@ -86,46 +86,30 @@
 						<h3 class="title pull-left">Últimas Notícias:</h3>
 					</div>
 					<div class="lastNews-bg">
-						<div class="lastNews-box">
-							<div class="lastNews-description">
-								<div class="col-xs-12 col-md-2 text-center">
-									<img src="assets/img/news2.jpg" alt="Lutador"  width="70px">
-								</div>
-								<div class="col-xs-12 col-md-10">
-									<a href="#">
-										O Boxe do Brasil estreou com uma bela vitória no Torneio de Verão de Iquique, que está acontecendo no Chile [...]
-									</a>
-								</div>
-							</div> <!-- description -->
-						</div> <!-- news1-->
-						<div class="lastNews-box">
-							<div class="lastNews-description">
-								<div class="col-xs-12 col-md-2 text-center">
-									<img src="assets/img/news3.jpg" alt="Lutador"  width="70px">
-								</div>
-								<div class="col-xs-12 col-md-10">
-									<a href="#">
-										O Boxe do Brasil estreou com uma bela vitória no Torneio de Verão de Iquique, que está acontecendo no Chile [...]
-									</a>
-								</div>
-							</div>
-						</div> 
-						<div class="lastNews-box">
-							<div class="lastNews-description">
-								<div class="col-xs-12 col-md-2 text-center">
-									<img src="assets/img/capa.jpg" alt="Lutador"  width="70px">
-								</div>
-								<div class="col-xs-12 col-md-10">
-									<a href="#">
-										O Boxe do Brasil estreou com uma bela vitória no Torneio de Verão de Iquique, que está acontecendo no Chile [...]
-									</a>
-								</div>
-							</div><!--description -->
-						</div> <!-- news 3-->
+						<ul id="latestNews">
+							<li>
+								<a href="#">
+									<img src="assets/img/news2.jpg" alt="Lutadores" class="news-picture">
+									<span>Beatriz Ferreira vence medalhista olímpica e vai para a final na Bulgária [...]</span>
+								</a>
+							</li>
+							<li>
+								<a href="">
+									<img src="assets/img/news3.jpg" alt="Lutadores" class="news-picture">
+									<span>Beatriz Ferreira vence medalhista olímpica e vai para a final na Bulgária [...]</span>
+								</a>
+							</li>
+							<li>
+								<a href="">
+									<img src="assets/img/capa.jpg" alt="Lutadores" class="news-picture">
+									<span>Beatriz Ferreira vence medalhista olímpica e vai para a final na Bulgária [...]</span>
+								</a>
+							</li>
+						</ul>
 						<div class="centerButtonLastNews">
 							<button type="button" class="btn btn-black pull-right">Mais Notícias...</button>
 						</div>
-					</div><!-- bg -->
+					</div>
 				</aside>
 			</div> <!-- col últimas notícias-->
 		</div><!-- row-->
