added social media bar

--- a/index.html
+++ b/index.html
@@ -21,10 +21,26 @@
 					<div class="logo pull-left">
 						<img src="assets/img/logo.jpg" alt="Logo boxe gaucho" width="125px" class="img-responsive">
 					</div>	
-					<!-- navbar-->
+					<div class="socialMedia pull-right">
+						<a href="https://www.facebook.com/boxegaucho/" target="_blank">
+							<img src="assets/img/facebook.png" alt="Facebook Icon">
+						</a>
+						<a href="https://www.instagram.com/boxegaucho/" target="_blank">
+							<img src="assets/img/instagram.png" alt="Instagram Icon">
+						</a>
+					</div>
+					<!-- flag effect -->
+				</div><!-- header container-->
+			</div><!--row-->
+			<div class="flag">
+				<span class="flag green"></span>
+				<span class="flag red"></span>
+				<span class="flag yellow"></span>
+			</div>
+			<div class="container">
+				<!-- navbar-->
 					<div class="col-xs-8 pull-right mainMenu">
-						<nav class="navbar navbar-default" role="navigation">
-							<div class="container-fluid">
+						<nav class="navbar navbar-default pull-right" role="navigation">
 								<!-- Brand and toggle get grouped for better mobile display -->
 								<div class="navbar-header">
 									<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
@@ -47,16 +63,8 @@
 										<li><a href="#">CONTATO</a></li>
 									</ul>
 								</div><!-- /.navbar-collapse -->
-							</div> <!--container navbar-->
 						</nav>
 					</div><!-- right column header-->
-					<!-- flag effect -->
-				</div><!-- header container-->
-			</div><!--row-->
-			<div class="flag">
-				<span class="flag green"></span>
-				<span class="flag red"></span>
-				<span class="flag yellow"></span>
 			</div>
 		</div><!--header-->
 	</header>
@@ -81,6 +89,7 @@
 				</main>
 			</div>
 			<div class="col-xs-12 col-md-6">
+				<!-- últimas notícias -->
 				<aside class="lastNews">
 					<div class="row">
 						<h3 class="title pull-left">Últimas Notícias:</h3>
@@ -96,20 +105,20 @@
 							<li>
 								<a href="">
 									<img src="assets/img/news3.jpg" alt="Lutadores" class="news-picture">
-									<span>Beatriz Ferreira vence medalhista olímpica e vai para a final na Bulgária [...]</span>
+									<span>Mais um dia de vitórias no Torneio de Verão de Iquique, realizado no Chile [...]</span>
 								</a>
 							</li>
 							<li>
 								<a href="">
 									<img src="assets/img/capa.jpg" alt="Lutadores" class="news-picture">
-									<span>Beatriz Ferreira vence medalhista olímpica e vai para a final na Bulgária [...]</span>
+									<span>Os nossos guerreiros já garantiram duas medalhas no 69º Strandja Tournament, que nesta edição levou 259[...]</span>
 								</a>
 							</li>
 						</ul>
 						<div class="centerButtonLastNews">
 							<button type="button" class="btn btn-black pull-right">Mais Notícias...</button>
 						</div>
-					</div>
+					</div> <!-- lastNews-bg -->
 				</aside>
 			</div> <!-- col últimas notícias-->
 		</div><!-- row-->
@@ -146,9 +155,12 @@
 					<div class="latestHeader">
 						<h3 class="title">Últimas Imagens</h3>
 					</div>
+					<div class="images">
+						Usar plugin: https://br.wordpress.org/plugins/wd-instagram-feed/ ou https://br.wordpress.org/plugins/instagram-feed/
+					</div>
 				</div>
 			</div>
-		</div>
+		</div> <!--video/image row-->
 	</div> <!--container -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<script src="assets/js/bootstrap.min.js"></script>	
