--- a/page.html
+++ b/page.html
@@ -74,21 +74,22 @@
 	</div><!--hero-->
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-12 col-md-6">
-				<main class="news">
-					<h3 class="title text-center">Federação Gaúcha de Boxe</h3>
-					<div class="news-description">
-						<p>
-							Desde a medalha de Bronze conquistada nos Jogos Olímpicos do México, em 1968, o Boxe do Brasil amargava um ostracismo indigno na modalidade. Esse vácuo durou quarenta anos, período em que não conseguimos sequer figurar entre as 40 melhores equipes do mundo. Essa realidade precisava ser modificada.
-						</p>
-						<p>
-							Em pouco tempo, o Boxe do Brasil pulou para o Top 10 em Campeonatos Mundiais. Em apenas duas edições de Jogos Olímpicos conquistamos quatro medalhas olímpicas. Entre 2009 e 2011 subimos três vezes no lugar mais alto do pódio nos mundiais Feminino, Juvenil e Masculino Elite. Entre 2009 e 2015 foram 9 as medalhas conquistadas em Campeonatos Mundiais.
+			<div class="col-xs-12 col-md-8">
+				<main class="page">
+					<h3 class="title">Page Title</h3>
+					<div class="page-content">
+						<p class="text-justify">
+							Aqui talvez a maior prova da evolução da modalidade, promovida nos últimos 7 anos.
+Em respeito aos atletas, treinadores, árbitros e dirigentes das Federações Estaduais, que formam a base do Boxe do Brasil e merecem total respeito, a atual gestão da CBBoxe investiu significativamente na melhoria da estrutura dos tradicionais Campeonatos Brasileiros de Boxe: Masculino Elite; Feminino Elite; Juvenil e Cadete Masculinos.
+Desde 2010 todos os participantes desses Campeonatos não ficam mais hospedados em locais insalubres, como em alojamentos embaixo de arquibancadas. Essa alteração tem o objetivo de propiciar efetiva dignidade aos envolvidos e a elevar a modalidade a outro patamar.
+Esses Campeonatos reúnem atletas de todos os cantos do nosso país, que lutam diariamente em busca do sonho olímpico em sessões diárias de treinamento duro. O pódio nos Campeonatos Brasileiros de Boxe significa tudo na vida de um atleta que inicia a sua carreira.
+Em respeito a isso e por amor ao Boxe, desde 2010 a CBBoxe providencia a hospedagem em hotéis para atletas, técnicos, árbitros e chefes de equipe. Todos ficam hospedados em confortáveis hotéis na cidade onde a competição é sediada. Também são oferecidas três refeições diárias e transporte a todos durante os eventos. A CBBoxe busca oferecer as melhores condições, tratando com respeito aqueles que lutam pelo crescimento de nossa modalidade.
+A atual gestão trabalha duro para que os atletas que representam seus estados nos Campeonatos organizados pela CBBoxe tenham todas as condições adequadas de disputa e possam ser agentes divulgadores da modalidade.
 						</p>
 					</div>
-					<button type="button" class="btn btn-black pull-right">Saiba Mais...</button>
 				</main>
 			</div>
-			<div class="col-xs-12 col-md-6">
+			<div class="col-xs-12 col-md-4">
 				<!-- últimas notícias -->
 				<aside class="lastNews">
 					<div class="row">
@@ -121,46 +122,7 @@
 					</div> <!-- lastNews-bg -->
 				</aside>
 			</div> <!-- col últimas notícias-->
-		</div><!-- row-->
-		<div class="row" style="margin: 30px 0">
-			<div class="col-xs-12 col-md-6">
-				<div class="latest text-center">
-					<div class="latestHeader">
-						<h3 class="title">Últimos Videos</h3>
-					</div>
-					<div class="col-xs-12 col-md-6">
-						<div class="video">
-							<iframe width="100%" src="https://www.youtube.com/embed/r9-4lUHU6WE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-						</div>
-					</div>
-					<div class=" col-xs-12 col-md-6 outros-videos">
-						<ul>
-							<li><a href="#">
-									<p>Robson Conceição conquista a medalha de prata no Campeonato Mundial de Boxe de 2013[...]</p>
-									<small>12/08/2014,22:15hs</small>
-									<span class="pull-right">Saiba Mais »</span>
-								</a></li>
-							<li><a href="#">
-									<p>Everton Lopes conquista uma honrosa medalha de bronze no Campeonato Mundial de 2013 realizado na cidade de Almaty, Cazaquistão [...]</p>
-									<small>12/08/2014,22:07hs</small>
-									<span class="pull-right">Saiba Mais »</span>
-								</a>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<div class="col-xs-12 col-md-6">
-				<div class="latest">
-					<div class="latestHeader">
-						<h3 class="title">Últimas Imagens</h3>
-					</div>
-					<div class="images">
-						Usar plugin: https://br.wordpress.org/plugins/wd-instagram-feed/ ou https://br.wordpress.org/plugins/instagram-feed/
-					</div>
-				</div>
-			</div>
-		</div> <!--video/image row-->
+		</div><!-- row -->
 	</div> <!--container -->
 	<footer>
 		<div class="sponsors text-center">
@@ -179,7 +141,7 @@
 				© Federação Gaúcha de Boxe - Todos os direitos reservados. <br> Desenvolvido por <a href="http://thiagobehm.github.io/" target="_blank">Thiago Behm</a>.
 			</p>
 		</div>
-
+		
 	</footer>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<script src="assets/js/bootstrap.min.js"></script>	
